check for SocketTimeoutException, and introduce new support for this.
svn path=/dasCore/community/autoplot2011/trunk/; revision=10836